{{$NEXT}}

0.06     2013-04-02

- Fixed some documentation errors.


0.05     2013-04-01

- Renamed the user attribute to username, but the former will still be
  supported by the constructor.

- Lots of refactorings to the Core role in preparation for
  Database::Migrator::Pg release.

- Added a class that helps with live tests - Test::Database::Migrator.


0.04     2012-04-22

- The logger attribute was not lazy, so it could be built before the quiet
  option was processed. This effectively meant that the quiet option was
  ignored.


0.03     2012-04-14

- Added missing prereqs on MooseX::Types and MooseX::Types::Path::Class.


0.02     2012-04-14

- Remove autodie from prereqs since there's nothing in the code that needs it
  right now.


0.01     2012-04-13

- First release upon an unsuspecting world.